<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".OxygenStatsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/statsToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        android:theme="@style/StatsToolbar"
        app:menu="@menu/dashboard_menu">

        <TextView
            android:id="@+id/stats_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TabLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:tabTextColor="@color/white"
            app:tabIndicatorColor="@color/gray_lighter"
            app:tabSelectedTextColor="@color/white">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today"/>

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week"/>

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/months"/>
        </android.support.design.widget.TabLayout>

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="348dp"
        android:background="@drawable/view_bacground"
        tools:layout_editor_absoluteY="122dp">

        <com.github.mikephil.charting.charts.HorizontalBarChart
            android:id="@+id/BarChart"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/read_button"></com.github.mikephil.charting.charts.HorizontalBarChart>


        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/fmChart"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BarChart">

        </com.github.mikephil.charting.charts.PieChart>

        <Button
            android:id="@+id/read_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/read"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/lbmChart"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/waterChart"
            app:layout_constraintStart_toEndOf="@+id/fmChart"
            app:layout_constraintTop_toBottomOf="@+id/BarChart" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/waterChart"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BarChart" />

        <TextView
            android:id="@+id/bmrValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="8dp"
            android:text="7000"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/textView26"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:text="3.8"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/textView29"
            app:layout_constraintEnd_toStartOf="@+id/textView28" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="BMR"
            android:textColor="@color/light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView27"
            app:layout_constraintStart_toStartOf="@+id/bmrValue" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="8dp"
            android:text="kcal"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/textView26"
            app:layout_constraintStart_toEndOf="@+id/bmrValue" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:text="kg"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/textView29"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="Ossa"
            android:textColor="@color/light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView28"
            app:layout_constraintStart_toStartOf="@+id/textView20" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="FM"
            android:textColor="@color/light"
            app:layout_constraintEnd_toEndOf="@+id/fmChart"
            app:layout_constraintStart_toStartOf="@+id/fmChart"
            app:layout_constraintTop_toBottomOf="@+id/fmChart" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="LBM"
            android:textColor="@color/light"
            app:layout_constraintEnd_toEndOf="@+id/lbmChart"
            app:layout_constraintStart_toStartOf="@+id/lbmChart"
            app:layout_constraintTop_toBottomOf="@+id/lbmChart" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Water"
            android:textColor="@color/light"
            app:layout_constraintEnd_toEndOf="@+id/waterChart"
            app:layout_constraintStart_toStartOf="@+id/waterChart"
            app:layout_constraintTop_toBottomOf="@+id/waterChart" />

        <TextView
            android:id="@+id/weightValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="10"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/BarChart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView56"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="kg"
            android:textColor="@color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/weightValue"
            app:layout_constraintStart_toEndOf="@+id/weightValue" />

    </android.support.constraint.ConstraintLayout>

    <ListView
        android:id="@+id/listWeekData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

    </ListView>
</LinearLayout>